# rudzio

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  Justfile.nix  LICENSE-MIT  README.md  THIRD_PARTY  deny.toml  flake.nix  llms.txt
.cargo/: audit.toml
cargo-rudzio/: Cargo.toml  README.md
cargo-rudzio/src/: args.rs  cli.rs  generate.rs  lib.rs  main.rs  sentinel.rs
cargo-rudzio/tests/: args_spec.rs  cli_spec.rs  cross_bridge_spec.rs  generate_spec.rs  main.rs  rustflags_spec.rs  spawn_env_spec.rs
common-context/: Cargo.toml
common-context/src/: global.rs  lib.rs  test_context.rs
e2e/: Cargo.toml
e2e/tests/: compile.rs  integration.rs  main.rs
e2e/tests/fixtures/: sync_test.rs
fixtures/: Cargo.toml
fixtures/tests/: compile.rs  integration.rs  main.rs
macro/: Cargo.toml
macro-internals/: Cargo.toml
macro-internals/src/: args.rs  codegen.rs  lib.rs  main_codegen.rs  parse.rs  proc_macro_env_codegen.rs  suite_codegen.rs  transform.rs
macro-internals/tests/: args.rs  codegen.rs  main.rs  parse.rs  test_attr_args.rs  transform.rs
macro/src/: args.rs  codegen.rs  lib.rs  suite_codegen.rs  transform.rs
migrate/: Cargo.toml  README.md
migrate/fixtures/ambassador_verbatim/expected/: Cargo.toml
migrate/fixtures/ambassador_verbatim/expected/src/: lib.rs
migrate/fixtures/ambassador_verbatim/input/: Cargo.toml
migrate/fixtures/ambassador_verbatim/input/src/: lib.rs
migrate/fixtures/ambassador_verbatim_with_tests/expected/: Cargo.toml
migrate/fixtures/ambassador_verbatim_with_tests/input/: Cargo.toml
migrate/fixtures/async_std_test/expected/: Cargo.toml
migrate/fixtures/async_std_test/input/: Cargo.toml
migrate/fixtures/bench_warn/expected/: Cargo.toml
migrate/fixtures/bench_warn/input/: Cargo.toml
migrate/fixtures/cfg_attr_only_no_suite/expected/: Cargo.toml
migrate/fixtures/cfg_attr_only_no_suite/input/: Cargo.toml
migrate/fixtures/cfg_attr_test_broadening/expected/: Cargo.toml
migrate/fixtures/cfg_attr_test_broadening/input/: Cargo.toml
migrate/fixtures/cfg_lints_preserve_existing/expected/: Cargo.toml
migrate/fixtures/cfg_lints_preserve_existing/input/: Cargo.toml
migrate/fixtures/cfg_test_with_expect_attr/expected/: Cargo.toml
migrate/fixtures/cfg_test_with_expect_attr/input/: Cargo.toml
migrate/fixtures/compio_test/expected/: Cargo.toml
migrate/fixtures/compio_test/input/: Cargo.toml
migrate/fixtures/crate_with_bins/expected/: Cargo.toml
migrate/fixtures/crate_with_bins/input/: Cargo.toml
migrate/fixtures/dry_run/input/: Cargo.toml
migrate/fixtures/existing_test_harness_flip/expected/: Cargo.toml
migrate/fixtures/existing_test_harness_flip/input/: Cargo.toml
migrate/fixtures/ignore_variants/expected/: Cargo.toml
migrate/fixtures/ignore_variants/input/: Cargo.toml
migrate/fixtures/integration_file/expected/: Cargo.toml
migrate/fixtures/integration_file/input/: Cargo.toml
migrate/fixtures/lib_unit_tests_harness_false/expected/: Cargo.toml
migrate/fixtures/lib_unit_tests_harness_false/input/: Cargo.toml
migrate/fixtures/mirror_dev_deps_for_rudzio_test/expected/: Cargo.toml
migrate/fixtures/mirror_dev_deps_for_rudzio_test/input/: Cargo.toml
migrate/fixtures/nested_modules/expected/: Cargo.toml
migrate/fixtures/nested_modules/input/: Cargo.toml
migrate/fixtures/nested_parent_mod_not_promoted/expected/: Cargo.toml
migrate/fixtures/nested_parent_mod_not_promoted/input/: Cargo.toml
migrate/fixtures/no_preserve_originals_flag/: args.txt
migrate/fixtures/no_preserve_originals_flag/expected/: Cargo.toml
migrate/fixtures/no_preserve_originals_flag/input/: Cargo.toml
migrate/fixtures/no_shared_runner_flag/: args.txt
migrate/fixtures/no_shared_runner_flag/expected/: Cargo.toml
migrate/fixtures/no_shared_runner_flag/input/: Cargo.toml
migrate/fixtures/plain_async_test/expected/: Cargo.toml
migrate/fixtures/plain_async_test/input/: Cargo.toml
migrate/fixtures/plain_sync_test/expected/: Cargo.toml
migrate/fixtures/plain_sync_test/input/: Cargo.toml
migrate/fixtures/result_returning_block_body/expected/: Cargo.toml
migrate/fixtures/result_returning_block_body/input/: Cargo.toml
migrate/fixtures/result_returning_test/expected/: Cargo.toml
migrate/fixtures/result_returning_test/input/: Cargo.toml
migrate/fixtures/rstest_skipped/expected/: Cargo.toml
migrate/fixtures/rstest_skipped/input/: Cargo.toml
migrate/fixtures/should_panic_warn/expected/: Cargo.toml
migrate/fixtures/should_panic_warn/input/: Cargo.toml
migrate/fixtures/test_context_migration/expected/: Cargo.toml
migrate/fixtures/test_context_migration/input/: Cargo.toml
migrate/fixtures/test_context_nested_impl/expected/: Cargo.toml
migrate/fixtures/test_context_nested_impl/input/: Cargo.toml
migrate/fixtures/test_context_sync_variant/expected/: Cargo.toml
migrate/fixtures/test_context_sync_variant/input/: Cargo.toml
migrate/fixtures/test_context_unresolvable/expected/: Cargo.toml
migrate/fixtures/test_context_unresolvable/input/: Cargo.toml
migrate/fixtures/tests_only_flag/: args.txt
migrate/fixtures/tests_only_flag/expected/: Cargo.toml
migrate/fixtures/tests_only_flag/input/: Cargo.toml
migrate/fixtures/tests_subdir_layout/expected/: Cargo.toml
migrate/fixtures/tests_subdir_layout/input/: Cargo.toml
migrate/fixtures/tokio_current_thread/expected/: Cargo.toml
migrate/fixtures/tokio_current_thread/input/: Cargo.toml
migrate/fixtures/tokio_default/expected/: Cargo.toml
migrate/fixtures/tokio_default/input/: Cargo.toml
migrate/fixtures/tokio_multi_thread/expected/: Cargo.toml
migrate/fixtures/tokio_multi_thread/input/: Cargo.toml
migrate/fixtures/workspace_crate/input/: Cargo.toml
migrate/src/: backup.rs  cli.rs  detect.rs  discovery.rs  emit.rs  lib.rs  main.rs  manifest.rs  phrase.rs  preflight.rs  report.rs  rewrite.rs  run.rs  runner_scaffold.rs  test_context.rs
migrate/tests/: golden.rs  main.rs
test-runner/: Cargo.toml  build.rs
test-runner/src/: main.rs
test-runner/src/tests/: fixtures.rs  macro_internals.rs  mod.rs  rudzio_self.rs
(+152 files in other folders)
