[package]
name = "rudzio"
version = "0.1.0"
edition = { workspace = true }
description = "Async testing framework with pluggable runtimes (tokio, compio) and per-test context setup/teardown."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mykytanikitenko/rudzio"
readme = "README.md"
keywords = ["testing", "async", "tokio", "compio", "runtime"]
categories = ["development-tools::testing", "asynchronous"]

# Single `#[rudzio::main]` per crate aggregates every `#[rudzio::test]` under
# `tests/`; Cargo's auto-discovery would otherwise promote each file to its
# own test binary.
autotests = false

[dependencies]
# `channel` enables `SpawnExt::spawn_with_handle` / `LocalSpawnExt::spawn_local_with_handle`,
# used by the futures-executor runtime.
futures-util = { workspace = true, features = ["channel"] }
# Wait-free MPSC + select! macro used by the live-output drawer thread
# (`src/output/render.rs`) to multiplex lifecycle events, pipe byte chunks,
# a redraw timer, and a shutdown signal.
crossbeam-channel = { workspace = true }
linkme = { workspace = true }
rudzio-macro = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true, optional = true }
compio-runtime = { workspace = true, features = ["time"], optional = true }
# compio-runtime depends on compio-driver with `default-features = false`,
# which leaves the I/O driver as a stub on Linux ("Stub driver does not
# support any operations" → every compio test panics on first poll). Add
# a direct dep on compio-driver so we can opt in to the io-uring driver
# explicitly. The `io-uring` cargo feature is the same name as compio's
# default — it's a no-op on macOS / Windows (their cfg_if branches skip
# it), so a single feature flip works across platforms.
compio-driver = { workspace = true, optional = true }
embassy-executor = { workspace = true, optional = true }
futures-executor = { workspace = true, features = ["thread-pool"], optional = true }
futures-timer = { workspace = true, optional = true }
send_wrapper = { workspace = true, features = ["futures"], optional = true }
# Only compiled when the `build` feature is on (the `rudzio::build`
# module). Kept optional so rudzio used purely as a runtime dep doesn't
# pull cargo_metadata's dep tree.
cargo_metadata = { workspace = true, optional = true }

# Signal handling is unconditional on Unix so the runner always cancels
# gracefully on both SIGINT and SIGTERM without any feature opt-in.
#
# libc is Unix-only here because the live-output capture
# (`src/output/pipe.rs`) uses `dup`/`dup2`/`pipe`/`setvbuf`/`fcntl` to
# redirect process-wide stdio through anonymous pipes; no Windows port
# yet (feature no-ops on non-unix).
[target.'cfg(unix)'.dependencies]
signal-hook = { workspace = true }
libc = { workspace = true }

# Self dev-dep turns on every runtime for the in-crate integration tests
# that run under `#[rudzio::main]`. Cargo unifies features, so this does not
# cause a duplicate build.
[dev-dependencies]
# Dogfood under every runtime rudzio ships.
rudzio = { path = ".", features = ["build", "common", "runtime-tokio-multi-thread", "runtime-tokio-current-thread", "runtime-tokio-local", "runtime-compio", "runtime-embassy", "runtime-futures"] }
anyhow = "=1.0.102"
# Renderer regression tests construct a `Drawer` directly and feed it
# synthetic lifecycle events; that requires the same channel primitives
# the production code uses.
crossbeam-channel = { workspace = true }

[[test]]
name = "main"
path = "tests/main.rs"
harness = false

[lib]
test = false

[features]
# Build-script helper. Enable in `[build-dependencies]` to access
# `rudzio::build::expose_bins(...)` for cross-crate aggregator test
# runners.
build = ["dep:cargo_metadata"]
# Opt-in: the ready-made `Suite` / `Test` pair in `rudzio::common::context`.
# Off by default so consumers that implement their own context types don't
# pay for code they don't use.
common = []
runtime-tokio-multi-thread = ["dep:tokio", "dep:send_wrapper", "tokio/rt-multi-thread"]
runtime-tokio-current-thread = ["dep:tokio", "dep:send_wrapper"]
runtime-tokio-local = ["dep:tokio", "dep:send_wrapper"]
runtime-compio = ["dep:compio-runtime", "dep:compio-driver", "compio-driver/io-uring", "dep:send_wrapper"]
runtime-embassy = ["dep:embassy-executor", "dep:send_wrapper"]
runtime-futures = ["dep:futures-executor", "dep:futures-timer", "dep:send_wrapper"]

[lints]
workspace = true

[workspace]
resolver = "3"
members = [
  "cargo-rudzio",
  "fixtures",
  "macro",
  "macro-internals",
  "migrate",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Local crates
rudzio = { version = "0.1.0", path = "." }
rudzio-macro = { version = "0.1.0", path = "macro" }
rudzio-macro-internals = { version = "0.1.0", path = "macro-internals" }

# External crates (pinned to exact versions for reproducible builds)
anyhow = "=1.0.102"
cargo_metadata = "=0.23.1"
compio-runtime = "=0.11.0"
compio-driver = "=0.11.4"
crossbeam-channel = "=0.5.15"
libc = "=0.2.186"
signal-hook = "=0.4.4"
embassy-executor = { version = "=0.10.0", features = ["platform-std"] }
futures-executor = "=0.3.32"
futures-timer = "=3.0.3"
futures-util = "=0.3.32"
ignore = "=0.4.25"
miette = { version = "=7.6.0", features = ["fancy-no-backtrace"] }
prettyplease = "=0.2.37"
thiserror = "=2.0.18"
proc-macro2 = "=1.0.106"
quote = "=1.0.45"
send_wrapper = "=0.6.0"
syn = "=2.0.117"
toml_edit = "=0.25.11"
tokio = { version = "=1.52.1", features = ["rt", "macros", "time"] }
tokio-util = { version = "=0.7.18", features = ["rt"] }
trybuild = "=1.0.116"
linkme = "=0.3.36"

# ===========================================================================
# Rust compiler lints
# ===========================================================================
[workspace.lints.rust]
warnings = "deny"

future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
let_underscore = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
refining_impl_trait = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }

unsafe_code = "deny"

macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
non_ascii_idents = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unused_results = "deny"
variant_size_differences = "deny"

# ===========================================================================
# Clippy lints
# ===========================================================================
[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

blanket_clippy_restriction_lints = { level = "allow", priority = 1 }
#cargo_common_metadata = { level = "allow", priority = 1 }
#multiple_crate_versions = { level = "allow", priority = 1 }
#error_impl_error = { level = "allow", priority = 1 }
#field_scoped_visibility_modifiers = { level = "allow", priority = 1 }
implicit_return = { level = "allow", priority = 1 }
missing_trait_methods = { level = "allow", priority = 1 }
mod_module_files = { level = "allow", priority = 1 }
multiple_inherent_impl = { level = "allow", priority = 1 }
pattern_type_mismatch = { level = "allow", priority = 1 }
pub_use = { level = "allow", priority = 1 }
pub_with_shorthand = { level = "allow", priority = 1 }
question_mark_used = { level = "allow", priority = 1 }
redundant_pub_crate = { level = "allow", priority = 1 }
redundant_type_annotations = { level = "allow", priority = 1 }
semicolon_outside_block = { level = "allow", priority = 1 }
std_instead_of_alloc = { level = "allow", priority = 1 }
std_instead_of_core = { level = "allow", priority = 1 }
separated_literal_suffix = { level = "allow", priority = 1 }
single_call_fn = { level = "allow", priority = 1 }
tests_outside_test_module = { level = "allow", priority = 1 }
# Many test binaries include intentional panics and unreachable! calls to
# exercise the framework's panic handling. Their signature keeps a Result
# return so the surrounding framework machinery still type-checks.
panic_in_result_fn = { level = "allow", priority = 1 }
