[package]
name = "cargo-rudzio"
version = "0.1.0"
edition = { workspace = true }
description = "Cargo subcommand: `cargo rudzio test` auto-generates a single-binary aggregator that runs every rudzio test in the workspace under one `#[rudzio::main]`."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mykytanikitenko/rudzio"

[lib]
name = "cargo_rudzio"
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "cargo-rudzio"
path = "src/main.rs"
test = false

[[test]]
name = "main"
path = "tests/main.rs"
harness = false

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
rudzio-migrate = { path = "../migrate" }
toml_edit = { workspace = true }

[dev-dependencies]
rudzio = { path = "..", features = ["common", "runtime-tokio-multi-thread"] }

# Duplicate of the workspace lint set with CLI-appropriate relaxations.
# Cargo disallows combining `lints.workspace = true` with per-crate
# overrides, so the lint policy is mirrored inline — keep in sync with
# `[workspace.lints.*]` in the root Cargo.toml.
[lints.rust]
warnings = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
let_underscore = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
refining_impl_trait = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }
unsafe_code = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
non_ascii_idents = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unused_results = "deny"
variant_size_differences = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
error_impl_error = "allow"
field_scoped_visibility_modifiers = "allow"
implicit_return = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
multiple_inherent_impl = "allow"
pattern_type_mismatch = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_pub_crate = "allow"
redundant_type_annotations = "allow"
semicolon_outside_block = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
separated_literal_suffix = "allow"
single_call_fn = "allow"
tests_outside_test_module = "allow"
unnecessary_wraps = "allow"
panic_in_result_fn = "allow"

# CLI-specific relaxations
absolute_paths = "allow"
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
collapsible_if = "allow"
doc_markdown = "allow"
else_if_without_else = "allow"
expect_used = "allow"
filetype_is_file = "allow"
if_then_some_else_none = "allow"
impl_trait_in_params = "allow"
implicit_clone = "allow"
indexing_slicing = "allow"
manual_let_else = "allow"
match_same_arms = "allow"
min_ident_chars = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
non_ascii_literal = "allow"
option_if_let_else = "allow"
print_stderr = "allow"
print_stdout = "allow"
ptr_arg = "allow"
redundant_closure_for_method_calls = "allow"
renamed_function_params = "allow"
shadow_reuse = "allow"
significant_drop_tightening = "allow"
single_char_lifetime_names = "allow"
string_slice = "allow"
too_many_lines = "allow"
use_debug = "allow"
wildcard_enum_match_arm = "allow"

exhaustive_enums = "allow"
exhaustive_structs = "allow"
missing_errors_doc = "allow"
missing_inline_in_public_items = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_long_first_doc_paragraph = "allow"

# The generator assembles the aggregator's Cargo.toml/build.rs as a
# `String` built up chunk by chunk; the single extra allocation per
# `format!(..)` is negligible next to the cost of running cargo over
# the result.
format_push_string = "allow"
# Build-script/cargo.toml code-gen literals include embedded newlines
# and double quotes; the "use raw strings" lint doesn't apply when the
# escape sequences are what we actually want to emit.
needless_raw_string_hashes = "allow"
# We iterate `toml_edit::Table::iter()` a lot; those don't match the
# "prefer `for x in &collection`" idiom clippy expects from Vec/Array.
explicit_iter_loop = "allow"
# Minor style nits that don't hold up in dense glue code.
assigning_clones = "allow"
collapsible_match = "allow"
let_underscore_untyped = "allow"
similar_names = "allow"
unseparated_literal_suffix = "allow"
# Cargo.toml keys like "dev-dependencies" and "default-features" show
# up as literal strings; renaming them would defeat the purpose.
print_with_newline = "allow"
