[package]
name = "cargo-rudzio"
version = "0.1.0"
edition = { workspace = true }
description = "Cargo subcommand: `cargo rudzio test` auto-generates a single-binary aggregator that runs every rudzio test in the workspace under one `#[rudzio::main]`."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mykytanikitenko/rudzio"
readme = "../README.md"
keywords = ["cargo-subcommand", "testing", "async", "tokio", "compio"]
categories = ["development-tools::cargo-plugins", "development-tools::testing"]

[lib]
name = "cargo_rudzio"
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "cargo-rudzio"
path = "src/main.rs"
test = false

[[test]]
name = "main"
path = "tests/main.rs"
harness = false

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
rudzio-migrate = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rudzio = { workspace = true, features = [
  "common",
  "runtime-tokio-multi-thread",
  "runtime-tokio-current-thread",
  "runtime-tokio-local",
  "runtime-compio",
  "runtime-embassy",
  "runtime-futures",
] }
tempfile = "=3.27.0"

[lints]
workspace = true
