[package]
name = "common-context"
version = "0.1.0"
edition = { workspace = true }
description = "Common Global/Test context implementations for rudzio, with a shared CancellationToken and TaskTracker."
license = "MIT OR Apache-2.0"

[dependencies]
rudzio = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
