[package]
name = "rudzio-e2e"
version = "0.1.0"
edition = { workspace = true }
publish = false
description = "End-to-end tests for the rudzio framework. Each binary is a scenario; the integration test runs them and asserts the outcome."

# Cargo would otherwise treat every `tests/*.rs` file as a separate test
# binary, defeating the point of a single `#[rudzio::main]` per crate.
autotests = false

[dependencies]
anyhow = "=1.0.102"
rudzio = { workspace = true, features = ["runtime-tokio", "runtime-compio", "runtime-embassy", "runtime-futures", "common"] }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }

# Integration tests drive child processes and deliver Unix signals to them
# to exercise the runner's SIGINT/SIGTERM handling.
[target.'cfg(unix)'.dev-dependencies]
libc = "=0.2.185"

# Rudzio tests itself: one `#[rudzio::main]` collects every `#[rudzio::test]`
# across the whole test binary (both integration scenarios and trybuild
# compile checks), so there is a single test entry point per crate.
[[test]]
name = "main"
path = "tests/main.rs"
harness = false

# Cargo forbids mixing `lints.workspace = true` with per-crate `[lints.*]`
# table overrides, so the workspace lint policy is mirrored here and a few
# test-code allows are appended. Keep the mirrored block in sync with the
# root `[workspace.lints.*]` tables; the e2e-specific allows at the end
# permit patterns that are normal in test fixtures (intentional panics,
# `unreachable!`, `exit`, stderr prints, bare `#[ignore]`, slice indexing,
# inferred integer literals, short identifiers).
[lints.rust]
warnings = "deny"

future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
let_underscore = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
refining_impl_trait = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }

unsafe_code = "deny"

macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
non_ascii_idents = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unused_results = "deny"
variant_size_differences = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

blanket_clippy_restriction_lints = { level = "allow", priority = 1 }
cargo_common_metadata = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
error_impl_error = { level = "allow", priority = 1 }
field_scoped_visibility_modifiers = { level = "allow", priority = 1 }
implicit_return = { level = "allow", priority = 1 }
missing_trait_methods = { level = "allow", priority = 1 }
mod_module_files = { level = "allow", priority = 1 }
multiple_inherent_impl = { level = "allow", priority = 1 }
pattern_type_mismatch = { level = "allow", priority = 1 }
pub_use = { level = "allow", priority = 1 }
pub_with_shorthand = { level = "allow", priority = 1 }
question_mark_used = { level = "allow", priority = 1 }
redundant_pub_crate = { level = "allow", priority = 1 }
redundant_type_annotations = { level = "allow", priority = 1 }
semicolon_outside_block = { level = "allow", priority = 1 }
std_instead_of_alloc = { level = "allow", priority = 1 }
std_instead_of_core = { level = "allow", priority = 1 }
separated_literal_suffix = { level = "allow", priority = 1 }
single_call_fn = { level = "allow", priority = 1 }
tests_outside_test_module = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
panic_in_result_fn = { level = "allow", priority = 1 }

# e2e-specific allows: test fixtures have different norms than production.
panic = { level = "allow", priority = 1 }
unreachable = { level = "allow", priority = 1 }
exit = { level = "allow", priority = 1 }
print_stderr = { level = "allow", priority = 1 }
ignore_without_reason = { level = "allow", priority = 1 }
indexing_slicing = { level = "allow", priority = 1 }
missing_asserts_for_indexing = { level = "allow", priority = 1 }
default_numeric_fallback = { level = "allow", priority = 1 }
min_ident_chars = { level = "allow", priority = 1 }
