[package]
name = "rudzio-fixtures"
version = "0.1.0"
edition = { workspace = true }
publish = false
description = "Scenario fixtures for the rudzio framework. Each binary in `src/bin/` is a standalone `#[rudzio::main]` program exercising one aspect of the framework; `tests/integration.rs` spawns them and asserts on their output."

# Cargo would otherwise treat every `tests/*.rs` file as a separate test
# binary, defeating the point of a single `#[rudzio::main]` per crate.
autotests = false

# `cargo rudzio test` generates an aggregator crate that `#[path]`-includes
# every member's `tests/*.rs`. `tests/compile.rs` is a trybuild harness with
# manifest-dir-relative paths that only resolve when compiled as part of this
# fixtures crate — exclude it from the aggregator so stock `cargo test -p
# rudzio-fixtures` still runs it while `cargo rudzio test` skips it.
[package.metadata.rudzio]
exclude = ["tests/compile.rs"]

[dependencies]
anyhow = "=1.0.102"
rudzio = { workspace = true, features = ["runtime-tokio-multi-thread", "runtime-tokio-current-thread", "runtime-tokio-local", "runtime-compio", "runtime-embassy", "runtime-futures", "common"] }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }

# Integration tests drive child processes and deliver Unix signals to them
# to exercise the runner's SIGINT/SIGTERM handling.
[target.'cfg(unix)'.dev-dependencies]
libc = "=0.2.186"

# Rudzio tests itself: one `#[rudzio::main]` collects every `#[rudzio::test]`
# across the whole test binary (both integration scenarios and trybuild
# compile checks), so there is a single test entry point per crate.
[[test]]
name = "main"
path = "tests/main.rs"
harness = false

# Each fixture bin is a `#[rudzio::main]` binary, not a libtest target;
# `test = false` suppresses cargo's default "unittests src/bin/<name>.rs"
# pass that would otherwise compile and run each bin once under libtest
# with 0 #[test] fns, cluttering `cargo test` output with empty result
# lines. Paths are implicit (`src/bin/<name>.rs`).
[[bin]]
name = "bg_thread_panic_in_setup_tokio_mt"
test = false

[[bin]]
name = "cancel_token_propagation_tokio_mt"
test = false

[[bin]]
name = "context_creation_failure_tokio_mt"
test = false

[[bin]]
name = "cross_runtime_parallel"
test = false

[[bin]]
name = "custom_context_tokio_mt"
test = false

[[bin]]
name = "failing_tokio_mt"
test = false

[[bin]]
name = "gradual_cancel_tokio_mt"
test = false

[[bin]]
name = "group_dedup_tokio_mt"
test = false

[[bin]]
name = "ignored_tokio_mt"
test = false

[[bin]]
name = "multi_file_suite"
test = false

[[bin]]
name = "hung_run_grace_tokio_mt"
test = false

[[bin]]
name = "multi_panic_ordering_tokio_mt"
test = false

[[bin]]
name = "multi_runtime"
test = false

[[bin]]
name = "mutable_test_context"
test = false

[[bin]]
name = "panic_in_suite_setup_tokio_mt"
test = false

[[bin]]
name = "panic_in_suite_teardown_tokio_mt"
test = false

[[bin]]
name = "panic_in_test_setup_tokio_mt"
test = false

[[bin]]
name = "panic_in_test_teardown_tokio_mt"
test = false

[[bin]]
name = "panics_tokio_mt"
test = false

[[bin]]
name = "parallel_tokio_mt"
test = false

[[bin]]
name = "passing_compio"
test = false

[[bin]]
name = "passing_embassy"
test = false

[[bin]]
name = "passing_futures"
test = false

[[bin]]
name = "passing_tokio_ct"
test = false

[[bin]]
name = "passing_tokio_local"
test = false

[[bin]]
name = "passing_tokio_mt"
test = false

[[bin]]
name = "per_test_attr_body_timeout_tokio_mt"
test = false

[[bin]]
name = "per_test_attr_setup_timeout_tokio_mt"
test = false

[[bin]]
name = "per_test_attr_teardown_timeout_tokio_mt"
test = false

[[bin]]
name = "per_test_timeout_tokio_mt"
test = false

[[bin]]
name = "plain_test_attr_tokio_mt"
test = false

[[bin]]
name = "repro_drop_barrier"
test = false

[[bin]]
name = "run_timeout_tokio_mt"
test = false

[[bin]]
name = "setup_failure_tokio_mt"
test = false

[[bin]]
name = "suite_setup_timeout_tokio_mt"
test = false

[[bin]]
name = "suite_teardown_timeout_tokio_mt"
test = false

[[bin]]
name = "sigint_cancel_tokio_mt"
test = false

[[bin]]
name = "spawn_blocking_tokio_mt"
test = false

[[bin]]
name = "spawn_tracked"
test = false

[[bin]]
name = "stdio_attribution_tokio_mt"
test = false

[[bin]]
name = "sync_mixed_tokio_mt"
test = false

[[bin]]
name = "teardown_always_runs_tokio_mt"
test = false

[[bin]]
name = "teardown_failure_tokio_mt"
test = false

[[bin]]
name = "teardown_invariants_tokio_mt"
test = false

[[bin]]
name = "test_setup_timeout_tokio_mt"
test = false

[[bin]]
name = "test_teardown_timeout_tokio_mt"
test = false

[[bin]]
name = "tracker_drain_tokio_mt"
test = false

# Cargo forbids mixing `lints.workspace = true` with per-crate `[lints.*]`
# table overrides, so the workspace lint policy is mirrored here and a few
# test-code allows are appended. Keep the mirrored block in sync with the
# root `[workspace.lints.*]` tables; the e2e-specific allows at the end
# permit patterns that are normal in test fixtures (intentional panics,
# `unreachable!`, `exit`, stderr prints, bare `#[ignore]`, slice indexing,
# inferred integer literals, short identifiers).
[lints.rust]
warnings = "deny"

future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
let_underscore = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
refining_impl_trait = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }

unsafe_code = "deny"

macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
non_ascii_idents = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unused_results = "deny"
variant_size_differences = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

blanket_clippy_restriction_lints = { level = "allow", priority = 1 }
cargo_common_metadata = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
error_impl_error = { level = "allow", priority = 1 }
field_scoped_visibility_modifiers = { level = "allow", priority = 1 }
implicit_return = { level = "allow", priority = 1 }
missing_trait_methods = { level = "allow", priority = 1 }
mod_module_files = { level = "allow", priority = 1 }
multiple_inherent_impl = { level = "allow", priority = 1 }
pattern_type_mismatch = { level = "allow", priority = 1 }
pub_use = { level = "allow", priority = 1 }
pub_with_shorthand = { level = "allow", priority = 1 }
question_mark_used = { level = "allow", priority = 1 }
redundant_pub_crate = { level = "allow", priority = 1 }
redundant_type_annotations = { level = "allow", priority = 1 }
semicolon_outside_block = { level = "allow", priority = 1 }
std_instead_of_alloc = { level = "allow", priority = 1 }
std_instead_of_core = { level = "allow", priority = 1 }
separated_literal_suffix = { level = "allow", priority = 1 }
single_call_fn = { level = "allow", priority = 1 }
tests_outside_test_module = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
panic_in_result_fn = { level = "allow", priority = 1 }

# e2e-specific allows: test fixtures have different norms than production.
panic = { level = "allow", priority = 1 }
unreachable = { level = "allow", priority = 1 }
exit = { level = "allow", priority = 1 }
print_stderr = { level = "allow", priority = 1 }
ignore_without_reason = { level = "allow", priority = 1 }
indexing_slicing = { level = "allow", priority = 1 }
missing_asserts_for_indexing = { level = "allow", priority = 1 }
default_numeric_fallback = { level = "allow", priority = 1 }
min_ident_chars = { level = "allow", priority = 1 }
